
    - the "passive" flag on session.is_modified()
      is correctly propagated to the attribute manager.

    - union() and union_all() will not whack 
      any order_by() that has been applied to the 
      select()s inside.  If you union() a 
      select() with order_by() (presumably to support
      LIMIT/OFFSET), you should also call self_group() 
      on it to apply parenthesis.
      
- documentation
    - Tickets [ticket:1200] [ticket:1149].
      
    - Added note about create_session() defaults.
    
    - Added section about metadata.reflect().
    
    - Updated `TypeDecorator` section.
    
    - Rewrote the "threadlocal" strategy section of 
      the docs due to recent confusion over this 
      feature.
     
    - Removed badly out of date 'polymorphic_fetch'
      and 'select_table' docs from inheritance, 
      reworked the second half of "joined table
      inheritance".
      
    - Documented `comparator_factory` kwarg, added
      new doc section "Custom Comparators".
    
- mssql
    - Added experimental support of savepoints. It
      currently does not work fully with sessions.

    - Support for three levels of column nullability: NULL, NOT NULL,
      and the database's configured default.  The default Column
      configuration (nullable=True) will now generate NULL in the DDL.
      Previously no specification was emitted and the database default
      would take effect (usually NULL, but not always).  To explicitly
      request the database default, configure columns with
      nullable=None and no specification will be emitted in DDL. This
      is backwards incompatible behavior. [ticket:1243]

- postgres
    - Calling alias.execute() in conjunction with
      server_side_cursors won't raise AttributeError.

- oracle
    - Adjusted the format of create_xid() to repair
      two-phase commit.   We now have field reports
      of Oracle two-phase commit working properly
      with this change.
      
0.5.0rc4
========
- features